IAM-Least-Privilege-Automation/phase5-7-policy-hardening/phase2-advanced/kubernetes/gatekeeper/container-security-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAegisContainerSecurity
metadata:
  name: aegis-container-security
spec:
  enforcementAction: deny

  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

    namespaces:
      - aegis-policy-test
