IAM-Least-Privilege-Automation/phase5-7-policy-hardening/phase2-advanced/kubernetes/gatekeeper/image-integrity-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAegisImageIntegrity
metadata:
  name: aegis-image-integrity
spec:
  enforcementAction: deny

  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

    namespaces:
      - aegis-policy-test
